fieldx/tests/uncompilable/stable+sync,async-tokio,clonable-lock/private.stderr
error[E0624]: method `read_foo` is private
 --> tests/uncompilable/private.rs
  |
 6 |         #[fieldx(vis(), lazy, reader)]
   |                               ------ private method defined here
...
   |     let foo = inner.read_foo();
   |                     ^^^^^^^^ private method
